crates/codegen/language/tests/src/fail/references/disabled_too_late/test.stderr
error: Parent scope is disabled in '3.0.0'.
  --> src/fail/references/disabled_too_late/test.rs:29:90
   |
29 |                     fields = (field_1 = Optional(kind = Terminal([Three]), disabled_in = "4.0.0"))
   |                                                                                          ^^^^^^^
